# Cpp_Project_Logging_System

./: .bazelignore  .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md
.cache/clangd/index/: ConsoleSinkImpl.cpp.73F51CADEB020922.idx  ConsoleSinkImpl.hpp.E88CA3599361D56B.idx  FileSinkImpl.cpp.12D8630280F57A2E.idx  FileSinkImpl.hpp.FB1A447651E3B1EF.idx  FileTelemetrySourceImpl.cpp.C8FFBBD5190DABC0.idx  FileTelemetrySourceImpl.hpp.59D83455AEC78F81.idx  ILogSink.hpp.6A254754805A598E.idx  ITelemetrySource.hpp.CD4D7CD6F7FAFF4D.idx  LogFormatter.hpp.77DC24539E58E082.idx  LogManager.cpp.4894B82C6426E322.idx  LogManager.hpp.3A7706F48EB9AB53.idx  LogManagerBuilder.cpp.7B50475DDF845C77.idx  LogManagerBuilder.hpp.0DD8B47F327BF0DB.idx  LogMessage.cpp.1E047AA1FDBD916D.idx  LogMessage.hpp.BE163C5119F910E2.idx  LogPolicies.hpp.DFD7577C04F01822.idx  LogSinkFactory.cpp.A5863CC14010D60B.idx  LogSinkFactory.hpp.1512E8B9978D163D.idx  LogTypes.hpp.A9DDA127D259D9A7.idx  RingBuffer.hpp.08C607538DAE8F49.idx  SafeFile.cpp.AE4AC3E7E01F021F.idx  SafeFile.hpp.1F35680B3CD57B38.idx  SafeSocket.cpp.11F85C99CAC104CB.idx  SafeSocket.hpp.C4AA4F204A29917D.idx  SocketTelemetrySourceImpl.cpp.5CD81CC247D5FBD0.idx  SocketTelemetrySourceImpl.hpp.6FC798CEE14524E2.idx  ThreadPool.hpp.97F0A7B03CE088C9.idx  main.cpp.C0796FDA20ACA820.idx
app/: BUILD  CMakeLists.txt
app/src/: main.cpp
config/: vsomeip-client.json  vsomeip-server.json
docs/: API.md  ARCHITECTURE.md  SOMEIP.md  class_diagram.puml
docs/diagrams/: 01_overview.puml  02_sink_hierarchy.puml  03_telemetry_hierarchy.puml  04_builder_factory.puml  05_policy_formatter.puml  06_core_classes.puml  seq_01_logging_flow.puml  seq_02_builder_creation.puml  seq_03_factory_creation.puml  seq_04_formatter_policy.puml  seq_05_ringbuffer_ops.puml  seq_06_complete_flow.puml
loggingLib/: BUILD  CMakeLists.txt
loggingLib/inc/: ConsoleSinkImpl.hpp  FileSinkImpl.hpp  FileTelemetrySourceImpl.hpp  ILogSink.hpp  ITelemetrySource.hpp  LogFormatter.hpp  LogManager.hpp  LogManagerBuilder.hpp  LogMessage.hpp  LogPolicies.hpp  LogSinkFactory.hpp  LogTypes.hpp  RingBuffer.hpp  SafeFile.hpp  SafeSocket.hpp  SocketTelemetrySourceImpl.hpp  ThreadPool.hpp
loggingLib/include/: LogManager.hpp  LogPolicies.hpp  LogSinkFactory.hpp  LogTypes.hpp
loggingLib/include/interfaces/: ILogSink.hpp
loggingLib/src/: ConsoleSinkImpl.cpp  FileSinkImpl.cpp  LogManager.cpp  LogManagerBuilder.cpp  LogMessage.cpp  LogSinkFactory.cpp
loggingLib/src/concurrency/: RingBuffer.hpp  ThreadPool.hpp
loggingLib/src/core/: LogManager.cpp  LogManagerBuilder.cpp  LogSinkFactory.cpp
loggingLib/src/sinks/: ConsoleSinkImpl.hpp  FileSinkImpl.hpp
loggingLib/src/sources/: FileTelemetrySourceImpl.cpp  FileTelemetrySourceImpl.hpp  SocketTelemetrySourceImpl.cpp  SocketTelemetrySourceImpl.hpp  SomeIPTelemetryAdapter.hpp  SomeIPTelemetrySourceImpl.hpp
loggingLib/src/utils/: SafeFile.cpp  SafeSocket.cpp
test/: BUILD  CMakeLists.txt  SomeIPTestServer.hpp  someip_test_client.cpp  someip_test_main.cpp
