
module(
    name = "cpp_logging_system",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.0.17")

# magic_enum via http_archive (BCR version incompatible with Bazel 9)
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "magic_enum",
    urls = ["https://github.com/Neargye/magic_enum/archive/refs/tags/v0.9.7.tar.gz"],
    strip_prefix = "magic_enum-0.9.7",
    build_file = "//third_party:magic_enum.BUILD",
)

# ===== System Libraries (vsomeip) =====
# system-installed vsomeip via new_local_repository

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "vsomeip",
    path = "/usr/local",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "vsomeip3",
    hdrs = glob(["include/vsomeip/**/*.hpp"]),
    includes = ["include"],
    linkopts = ["-L/usr/local/lib", "-lvsomeip3"],
    visibility = ["//visibility:public"],
)
""",
)
